bug(dialog): Fix layout issues

--- a/source/components/dialog/_index.scss
+++ b/source/components/dialog/_index.scss
@@ -160,6 +160,7 @@ $zoomrc-dialog-header-title-left-padding: 20px;
       > .title {
         padding-left: 0;
         padding-right: $zoomrc-dialog-header-title-left-padding;
+        text-align: left;
       }
     }
   }
